--- a/0. 필요 사전 지식/npm 개념/npm_system_summary.html
+++ b/0. 필요 사전 지식/npm 개념/npm_system_summary.html
@@ -159,31 +159,30 @@
         //              -> 유닉스 리눅스 맥OS : 명령어 앞에 “sudo”를 붙여 관리자 권한으로 실행하게 함
         //              -> 윈도우            : cmd를 실행할 때 마우스 우클릭 후 “관리자 권한으로 실행”을 클릭해서 명령어를 입력
 
-// 버전
-// 기본적으로 버전은 [MAJOR , MINOR, PATCH] 로 구성되어 있다.  이러한 표기법은 시맨틱 버저닝(Semantic Versioning) 규칙을 따르고 있다.
-// package.json 에 버전 명시를 다음과 같이 할 수 있다.
-// 1.2.3 >1.2.3 >=1.2.3 <1.2.3 <=1.2.3 ~1.2.3 ^1.2.3 
+        //  * 버저닝 (versioning)
+        //      : 기본적으로 버전은 [MAJOR , MINOR, PATCH] 로 구성, package.json 에 버전 명시
+        //          -> ex) 1.2.3 >1.2.3 >=1.2.3 <1.2.3 <=1.2.3 ~1.2.3 ^1.2.3 
 
-// 시맨틱 버저닝(Semantic Versioning)
-// 시맨틱 버저닝(Semantic Versioning)은 소프트웨어의 버전 변경 규칙에 대한 제안입니다.
-// [MAJOR , MINOR, PATCH] (ex. 1.0.2)
-// MAJOR - 주요변화, 기존 API 추가/변경/삭제 등, 이전 버전과 호환이 안될 수 있음
-// MINOR - 기능추가, 이전 버전과 호환됨
-// PATCH - 버그수정, 이전 버전과 호환됨
+        //  * 시맨틱 버저닝(Semantic Versioning)
+        //      : 소프트웨어의 버전 변경 규칙에 대한 제안
+        //          ex) [MAJOR , MINOR, PATCH] (ex. 1.0.2)
+        //              -> MAJOR - 주요변화, 기존 API 추가/변경/삭제 등, 이전 버전과 호환이 안될 수 있음
+        //              -> MINOR - 기능추가, 이전 버전과 호환됨
+        //              -> PATCH - 버그수정, 이전 버전과 호환됨
 
-// 틸드(~)
-// 틸드는 현재 지정한 버전의 마지막 자리 내의 범위에서만 자동으로 업데이트 한다.
-// ~0.0.1  : >=0.0.1 <0.1.0
-// ~0.1.1  : >=0.1.1 <0.2.0
-// ~0.1  : >=0.1.0 <0.2.0
-// ~0  : >=0.0 <1.0
+        //  * 틸드(~)
+        //      : 현재 지정한 버전의 마지막 자리 내의 범위에서만 자동으로 업데이트
+        //          ex) ~0.0.1  : >=0.0.1 < 0.1.0
+        //              ~0.1.1  : >=0.1.1 < 0.2.0
+        //              ~0.1    : >=0.1.0 < 0.2.0
+        //              ~0      : >=0.0 < 1.0
 
-// 캐럿(^)
-// 캐럿(^)은 Node.js 모듈이 이 SemVer의 규약을 따른다는 것을 신뢰한다는 가정하에서 동작한다.
-// 그래서 MINOR나 PATCH버전은 하위호환성이 보장되어야 하므로 업데이트를 한다.
-// ^1.0.2 : >=1.0.2 <2.0
-// ^1.0 : >=1.0.0 <2.0
-// ^1 : >=1.0.0 <2.0
+        //  * 캐럿(^)
+        //      : Node.js 모듈이 이 SemVer의 규약을 따른다는 것을 신뢰한다는 가정하에서 동작
+        //          -> 그래서 MINOR나 PATCH버전은 하위호환성이 보장되어야 하므로 업데이트를 한다.
+        //              ex) ^1.0.2  : >= 1.0.2 < 2.0
+        //                  ^1.0    : >= 1.0.0 < 2.0
+        //                  ^1      : >= 1.0.0 < 2.0
 
     </script>
 </head>
